fix collapse/expand of documents

--- a/eggs/Naaya/eggs/eea.aoamap/eea/aoamap/browser/www/search_map.css
+++ b/eggs/Naaya/eggs/eea.aoamap/eea/aoamap/browser/www/search_map.css
@@ -221,11 +221,11 @@ div#document-info {
   font-weight: bold;
 }
 
-.expanded {
+li.document a.title {
   background: transparent url('expand.png') no-repeat scroll left center;
 }
 
-.collapsed {
+li.document.expanded a.title {
   background: transparent url('collapse.png') no-repeat scroll left center;
 }
 
